fix(workflows): do not check for all systems
The GitHub runner is amd64, and emulation is slow.

Signed-off-by: Ophestra <random@chars.jp>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Run tests
         run: |
-          nix --print-build-logs --experimental-features 'nix-command flakes' flake check --all-systems
+          nix --print-build-logs --experimental-features 'nix-command flakes' flake check
 
   go:
     name: Run Go tests
