--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,10 +28,36 @@ jobs:
           purge-created: 60
           purge-primary-key: never
 
-      - name: Run tests
+      - name: Run check
         run: |
           nix --print-build-logs --experimental-features 'nix-command flakes' flake check
 
+  build:
+    name: Build in Nix
+    runs-on: ubuntu-latest
+    permissions:
+      actions: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install Nix
+        uses: nixbuild/nix-quick-install-action@v29
+
+      - name: Restore and cache Nix store
+        uses: nix-community/cache-nix-action@v5
+        with:
+          primary-key: build-${{ runner.os }}-${{ hashFiles('**/*.nix') }}
+          restore-prefixes-first-match: build-${{ runner.os }}-
+          gc-max-store-size-linux: 1073741824
+          purge: true
+          purge-prefixes: build-${{ runner.os }}-
+          purge-created: 60
+          purge-primary-key: never
+
+      - name: Run build
+        run: |
+          nix --print-build-logs --experimental-features 'nix-command flakes' build
   go:
     name: Run Go tests
     runs-on: ubuntu-latest
